# abjad

./: '  .ackrc  .coveragerc  .gitignore  .landscape.yml  .travis.yml  Dockerfile  INSTALL  LICENSE  MANIFEST.in  Makefile  PACKAGING.md  README  README.md  README.rst  authors-transform.txt  conftest.py  index.html  mypy.ini  output.ly  params.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  tags  test.ly  tmp-pdfcrop-59082.tex  tox.ini
.github/workflows/: .main.yml.swp  main.yml
abjad/: .ackrc  __init__.py  _getlib.py  _indentlib.py  _inspect.py  _iterate.py  _iterlib.py  _update.py  _updatelib.py  _version.py  attach.py  bind.py  bundle.py  cli.py  configuration.py  const.py  contextmanagers.py  contributions.py  cyclictuple.py  deprecated.py  duration.py  dynamic.py  enumerate.py  enumeratex.py  enums.py  exceptions.py  expression.py  format.py  formatting.py  formatx.py  fsv.py  get.py  grace_corner_cases.py  illustrate.py  illustrators.py  indicators.py  inspectx.py  instruments.py  io.py  iox.py  (+56 more)
abjad/_stylesheets/: abjad-coloring.ily  abjad-spanners.ily  heji2-ji-accidental-markups.ily  markup-functions.ily  nalesnik-text-spanner-id.ily  (+1 more)
boilerplate/: Maker.py  __aliases__.py  __close_preview_pdf__.scr  __make_material_ly__.py  __make_segment_clicktrack__.py  __make_segment_pdf__.py  __metadata__.py  full-score-music.ly  function.py  part-music.ly  part.tex  score-music.ly  score-preface.tex  score_layout.py  segment_layout.py  stylesheet.ily
ci/: requirements.txt
docs/: Makefile  make.bat
dotfiles/: vimrc
etc/: performance.txt
experimental/: :wq  __init__.py  exceptions.py
foo/: test.txt
htmlcov/: abjad___init___py.html  abjad__version_py.html  abjad_cli_py.html  abjad_const_py.html  abjad_core_AfterGraceContainer_py.html  abjad_core_BeforeGraceContainer_py.html  abjad_core_Chord_py.html  abjad_core_Cluster_py.html  abjad_core_Component_py.html  abjad_core_Container_py.html  abjad_core_Context_py.html  abjad_core_Descendants_py.html  abjad_core_DrumNoteHead_py.html  abjad_core_Inspection_py.html  abjad_core_Iteration_py.html  abjad_core_Label_py.html  abjad_core_LeafMaker_py.html  abjad_core_Leaf_py.html  abjad_core_Lineage_py.html  abjad_core_LogicalTie_py.html  abjad_core_MultimeasureRest_py.html  abjad_core_Mutation_py.html  abjad_core_NoteHeadList_py.html  abjad_core_NoteHead_py.html  abjad_core_NoteMaker_py.html  abjad_core_Note_py.html  abjad_core_OnBeatGraceContainer_py.html  abjad_core_Parentage_py.html  abjad_core_Rest_py.html  abjad_core_Score_py.html  abjad_core_Selection_py.html  abjad_core_Skip_py.html  abjad_core_StaffGroup_py.html  abjad_core_Staff_py.html  abjad_core_TremoloContainer_py.html  abjad_core_Tuplet_py.html  abjad_core_VerticalMoment_py.html  abjad_core_Voice_py.html  abjad_core_Wellformedness_py.html  abjad_core___init___py.html  (+265 more)
ly/: Makefile  contexts.ly  current_module.ly  engravers.ly  grob_interfaces.ly  guile_interpreter.ly  helpers.scm  interface_properties.ly  language_pitch_names.ly  markup_functions.ly  music_glyphs.ly
scoremanager/: __init__.py
scoremanagertools/: __init__.py
scr/: abjad  abjad-ack  abjad-log  abjad-ly  abjad-pdf  abjad-pep8  abjad.py  ackdefpy  ackpy  ajk  ajv  find-duplicate-module-names  find-file-names-with-forbidden-characters  find-import-as-statements  find-lower-camel-case-definitions  find-lower-camel-case-modules  find-nonalphabetized-class-attributes  fix-tests  make-packaging-transcript  prime_parser_tables.py  start_abjad.py  timer.py  trash  write-parser-syntax-skeleton  write_parser_syntax_skeleton.py
source/: test.ly
tests/: _defaults.py  conftest.py  default_values.py  test_AbjadConfiguration___init__.py  test_AbjadConfiguration_get_abjad_version_string.py  test_AbjadConfiguration_get_lilypond_version_string.py  test_AbjadConfiguration_get_python_version_string.py  test_AbjadConfiguration_get_tab_width.py  test_AbjadConfiguration_get_text_editor.py  test_AbjadConfiguration_list_package_dependency_versions.py  test_AbjadObject___repr__.py  test_Accidental.py  test_AfterGraceContainer.py  test_Beam__fracture.py  test_Beam_detach.py  test_Beam_direction.py  test_Chord.py  test_Chord___copy__.py  test_Chord___deepcopy__.py  test_Chord___eq___.py  test_Chord___init__.py  test_Chord___setattr__.py  test_Chord___str__.py  test_Chord_written_pitches.py  test_Cluster.py  test_Cluster___init__.py  test_Component.py  test_Component__get_in_my_logical_voice.py  test_Component__get_sibling.py  test_Component__immediately_precedes.py  test_Component__move_indicators.py  test_Component__remove_and_shrink_durated_parent_containers.py  test_Component__sibling.py  test_Container.py  test_Container___contains__.py  test_Container___copy__.py  test_Container___delitem__.py  test_Container___getitem__.py  test_Container___init__.py  test_Container___setattr__.py  (+394 more)
trunk/: INSTALL  MANIFEST.in  abj  ez_setup.py  setup.cfg  setup.py
(+43508 files in other folders)
