[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abjad"
version = "3.23"
description = "Abjad is a Python API for building LilyPond files."
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.12"
keywords = ["lilypond", "music composition", "music notation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software"
]
dependencies = [
    "ply>=3.11",
    "roman>=5.0",
    "uqbar>=0.7.4"
]

[[project.authors]]
name = "Trevor Bača"
email = "trevor.baca@gmail.com"

[[project.authors]]
name = "Joséphine Wolf Oberholtzer"
email = "josephine.wolf.oberholtzer@gmail.com"

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "build==1.2.2.post1",
    "flake8==7.2.0",
    "isort==6.0.1",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.0",
    "pytest-helpers-namespace==2021.12.29",
    "setuptools==78.1.0",
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-toggleprompt==0.6.0",
    "twine==6.1.0"
]

[project.urls]
Homepage = "https://abjad.github.io"

[[tool.mypy.overrides]]
module = "docutils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ply"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ply.yacc"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "roman"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
markers = "sphinx"
testpaths = ["tests", "source"]

[tool.setuptools]
include-package-data = true
packages = ["abjad"]
package-dir = { "" = "source" }

[tool.setuptools.package-data]
"*" = ["LICENSE", "README.rst", "conftest.py"]
"abjad" = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["docs/*"]
